# e-mobility-charging-stations-simulator

./: .cfignore  .dockerignore  .editorconfig  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.json  .flowconfig  .gitattributes  .gitignore  .gitmodules  .lintstagedrc.js  .lintstagedrc.json  .mocharc.json  .npmrc  .nycrc.json  .prettierignore  .prettierrc.json  .release-it.json  .xmake.cfg  AGENTS.md  AI-Driven-Development-Report.md  CHANGELOG.md  CLONE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gruntfile.js  LICENSE  README.md  REUSE.toml  build-requirements.js  build-requirements.mjs  bundle.js  charging-stations-simulator-start.sh  cspell.config.yaml  e-mobility-charging-stations-simulator.code-workspace  eslint.config.js  manifest-cf-template.yml  mikro-orm.config-template.ts  (+22 more)
.aws/: prod-td.json
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/release-please/: config.json  manifest.json
.github/workflows/: autofix.yml  build.yml  ci.yml  clone-count.yml  codeql-analysis.yml  combine-prs.yml  deploy_staging1.yml  greetings.yml  lint.yml  nodejs.yml  release-please.yml  repo-stats.yml  sandcastle.yml  unit-tests.yml
.hyperspace/: pull_request_bot.json
.opencode/: opencode.jsonc
.opencode/agent/: review.md
.opencode/command/: format-simulator.md  openspec-apply.md  openspec-archive.md  openspec-proposal.md  opsx-apply.md  opsx-archive.md  opsx-bulk-archive.md  opsx-continue.md  opsx-explore.md  opsx-ff.md  opsx-new.md  opsx-onboard.md  opsx-sync.md  opsx-verify.md  test-simulator.md  tests-simulator-file.md  tests-simulator.md
.opencode/skills/: qmd
.reuse/: dep5
.sandcastle/: .env.example  .gitignore  Dockerfile  README.md  concurrency-pool.ts  constants.ts  errors.ts  finalizer.ts  loop-control.ts  main.ts  merge-findings.ts  parse-findings.ts  plan-prompt.md  refinement-loop.ts  task-source.ts  types.ts  utils.ts  validation.ts
.sandcastle/docs/: parallel-decomposition-requirements.md
.sandcastle/strategies/: index.ts
.sandcastle/tests/: concurrency-pool.test.ts  errors.test.ts  factories.ts  finalizer.test.ts  loop-control.test.ts  merge-findings.property.test.ts  merge-findings.test.ts  parse-findings.test.ts  refinement-loop.test.ts  strategies-validation.test.ts  strategies.test.ts  types.test.ts  utils.test.ts
.serena/: project.yml
.serena/memories/: code_style_conventions.md  ocpp_architecture.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.sisyphus/: boulder.json
.sisyphus/evidence/: phase-0-baseline.txt  phase-0-complete.txt  phase-1-complete.txt  phase-2-complete.txt  phase-4-complete.txt  phase-5-complete.txt  phase-6-ci-blockers.md  phase-6-complete.txt  phase-6-in-progress.txt  task-1-build-check.txt  task-1-field-match.txt  task-2-tdd-red.txt  task-2-test-structure.txt  task-4-tdd-red.txt  test-analysis.md  test-results.txt
.sisyphus/plans/: ocpp2-certificate-management.md  refactor-transaction-event.md
.zed/: settings.json
SAP/e-mobility-charging-stations-simulator/: README.md
docker/: Dockerfile  Makefile  autoconfig.sh  buildspec.yml  config.json  docker-compose.yml  run.sh  start.sh
docs/: GetVariables-Gap-Analysis.md  signed_meter_values-v10-1.md
docs/ocpp16/: OCPP 1.6 security whitepaper edition 3.md  ocpp-1.6 edition 2.md  ocpp-1.6-errata-sheet.md  ocpp-j-1.6-errata-sheet.md  (+3 more)
docs/ocpp2/: ReadMe.md  (+8 more)
openspec/: AGENTS.md  config.yaml  project.md
patches/: @ai-hero__sandcastle.patch  @ai-hero__sandcastle@0.5.11.patch  @ai-hero__sandcastle@0.6.5.patch
scripts/: build-requirements.js  bundle.js  prepare.js  runtime.d.ts  runtime.js  seed-templates.ts
src/: index.js  internal.ts  list of URLs.txt  start.js  start.ts
tests/: ChargingStationFactory.test.ts  ChargingStationFactory.ts  TEST_STYLE_GUIDE.md  ocpp2-e2e-test-plan.md
tests/ocpp-server/: .editorconfig  .gitignore  .lintstagedrc.js  CHANGELOG.md  README.md  pyproject.toml  server.py  test_server.py  test_timer.py  timer.py
utils/: runtime.js
(+1765 files in other folders)
