[tool.poetry]
name = "ocpp-server"
version = "2.4.0"
description = "OCPP2 mock server"
authors = ["Jérôme Benoit <jerome.benoit@sap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^15.0"
ocpp = "^2.1.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1"
ruff = "^0.14"

[tool.taskipy.tasks]
server = "poetry run python server.py"
test = "poetry run python test_server.py"
format = "ruff check --fix . && ruff format ."
lint = "ruff check --diff . && ruff format --check --diff ."

[tool.ruff.lint]
select = ["E", "W", "F", "ASYNC", "S", "B", "A", "Q", "RUF", "I"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
