[project]
name = "ocpp-server"
version = "3.4.0"
description = "OCPP2 mock server"
authors = [{ name = "Jérôme Benoit", email = "jerome.benoit@sap.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "websockets>=16.0,<17.0",
    "ocpp>=2.1.0,<3.0.0",
]

[tool.poetry.group.dev.dependencies]
taskipy = "^1"
ruff = "^0.15"
mypy = "^1"
pytest = "^9.0.0"
pytest-asyncio = ">=1.3.0"
pytest-cov = "^7.0.0"

[tool.taskipy.tasks]
server = "poetry run python server.py"
test = "poetry run pytest -v"
test_coverage = "poetry run pytest -v --cov --cov-report=term-missing"
typecheck = "poetry run mypy server.py timer.py test_server.py test_timer.py"
format = "ruff check --fix . && ruff format ."
lint = "ruff check --diff . && ruff format --check --diff ."

[tool.ruff.lint]
select = ["E", "W", "F", "ASYNC", "S", "B", "A", "Q", "RUF", "I"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["ocpp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["test_server", "test_timer"]
disallow_untyped_defs = false

[tool.coverage.run]
branch = true
source = ["server", "timer"]

[tool.coverage.report]
show_missing = true
fail_under = 83
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
